force-app/main/default/objects/ELLISPHERE__Elli_Assessement__c/ELLISPHERE__Elli_Assessement__c.object-meta.xml
<CustomObject>
    <description>Bloc Score et Avis de crédit</description>
    <label>Score et Avis de crédit</label>
    <nameField>
        <label>Date du score</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scores et Avis de crédit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>