force-app/main/default/objects/ELLISPHERE__Elli_Assessement__c/fields/COMMUNITY_Elli_Score__c.field-meta.xml
<CustomField>
    <fullName>COMMUNITY_Elli_Score__c</fullName>
    <description>Affiche correctement les images du score depuis la communauté</description>
    <formula>IF(ISBLANK(ELLISPHERE__Elli_Tch_Score__c),
&quot;N/A&quot;,
IF($Organization.Id == &apos;00D1t000000q8Z4&apos;,
IF(ISNUMBER(ELLISPHERE__Elli_Tch_Score__c),
IMAGE(&apos;https://alliancedesenergies.my.site.com/partenaire/resource/ELLISPHERE__ImagesEllisphere/Ellisphere_images/score_&apos;&amp; ELLISPHERE__Elli_Tch_Score__c &amp;&apos;.png&apos;,ELLISPHERE__Elli_Tch_Score__c &amp; &apos;/ 10&apos;,30,88),
IF(ELLISPHERE__Elli_Tch_Score__c == &apos;NA&apos; || ELLISPHERE__Elli_Tch_Score__c == &apos;N.A.&apos;,
IMAGE(&apos;https://alliancedesenergies.my.site.com/partenaire/resource/ELLISPHERE__ImagesEllisphere/Ellisphere_images/score_NA.png&apos;,&apos;NA&apos;,30,88),
IMAGE(&apos;https://alliancedesenergies.my.site.com/partenaire/resource/ELLISPHERE__ImagesEllisphere/Ellisphere_images/score_fusionne_&apos; &amp; ELLISPHERE__Elli_Tch_Score__c &amp; &apos;.png&apos;,ELLISPHERE__Elli_Tch_Score__c,30,88)
)
),
IF(ISNUMBER(ELLISPHERE__Elli_Tch_Score__c),
IMAGE(&apos;https://alliancedesenergies.my.site.com/partenaire/resource/ELLISPHERE__ImagesEllisphere/Ellisphere_images/score_&apos;&amp; ELLISPHERE__Elli_Tch_Score__c &amp;&apos;.png&apos;,ELLISPHERE__Elli_Tch_Score__c &amp; &apos;/ 10&apos;,30,88),
IF(ELLISPHERE__Elli_Tch_Score__c == &apos;NA&apos; || ELLISPHERE__Elli_Tch_Score__c == &apos;N.A.&apos;,
IMAGE(&apos;https://alliancedesenergies.my.site.com/partenaire/resource/ELLISPHERE__ImagesEllisphere/Ellisphere_images/score_NA.png&apos;,&apos;NA&apos;,30,88),
IMAGE(&apos;https://alliancedesenergies.my.site.com/partenaire/resource/ELLISPHERE__ImagesEllisphere/Ellisphere_images/score_fusionne_&apos; &amp; ELLISPHERE__Elli_Tch_Score__c &amp; &apos;.png&apos;,ELLISPHERE__Elli_Tch_Score__c,30,88)
)
)
)
)</formula>
    <inlineHelpText>Default probability score at 12 months.</inlineHelpText>
    <label>Score</label>
    <type>Text</type>
</CustomField>