force-app/main/default/objects/ELLISPHERE__Elli_Assessement__c/fields/credit_score_date__c.field-meta.xml
<CustomField>
    <fullName>credit_score_date__c</fullName>
    <formula>DATE(VALUE(MID(Name,7,4)),VALUE(MID(Name,4,2)),VALUE(MID(Name,0,2)))</formula>
    <label>Credit score date</label>
    <type>Date</type>
</CustomField>